--- a/packages/image-processing/package.json
+++ b/packages/image-processing/package.json
@@ -9,7 +9,8 @@
         "build": "just-scripts build",
         "test": "just-scripts test",
         "image-to-gray": "just-scripts image-to-gray",
-        "image-to-binary": "just-scripts image-to-binary"
+        "image-to-binary": "just-scripts image-to-binary",
+        "quick-validation": "just-scripts quick-validation"
     },
     "devDependencies": {
         "@types/jest": "^29.2.4",
@@ -17,5 +18,8 @@
         "just-scripts": "^2.0.1",
         "ts-jest": "^29.0.3",
         "typescript": "~4.9.3"
+    },
+    "dependencies": {
+        "bmp-js": "^0.1.0"
     }
 }
