Updating readme and renaming package since there's a name clash.

--- a/packages/image-processing/package.json
+++ b/packages/image-processing/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "image-processing",
+    "name": "bmp-image-processing",
     "version": "1.0.0",
     "description": "Image processing package",
     "main": "lib/index.js",
